# SDL

./: .gitignore  CMakeLists.txt  LevelManager.cpp  LevelManager.h  README.md  Sprite.cpp  Sprite.h  Window.cpp  Window.h  global.h  main.cpp
Ally/: Ally.cpp  Ally.h
Assets/UI/: button.psd  buttonPress.psd  howToPlay.psd  input.psd
Enemy/: Enemy.cpp  Enemy.h
Managers/LevelManager/: LevelManager.cpp  LevelManager.h
Managers/ReplayManager/: ReplayManager.cpp  ReplayManager.h
Managers/SaveManager/: SaveManager.cpp  SaveManager.h
Managers/SceneManager/: SceneManager.cpp  SceneManager.h
Managers/SoundManager/: SoundManager.cpp  SoundManager.h
Player/: Player.cpp  Player.h
Text/: Text.cpp  Text.h
Texture/: Texture.cpp  Texture.h
Tree/: Tree.cpp  Tree.h
UI/: Button.cpp  Button.h
hunter/cmake/: HunterGate.cmake
x86_64-w64-mingw32/include/SDL2/: SDL_rect.h
